--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -4,6 +4,7 @@
 	<title>Nathan & Arjanna</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/bootstrap.css"/>
+	<link rel="stylesheet" href="css/custom.css"/>
 	<script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
@@ -12,18 +13,8 @@
 </head>
 
 <body>
-	<h1>Meer info volgt nog!</h1>
-	<button type="button" class="btn btn-primary">Primary</button>
-	<button type="button" class="btn btn-primary align-bottom btn-lg mr-1">Large</button>
-	<img class="" src="images\SelfieWaa.JPG" alt="environment">
-    <div class="webgl-content">
-      <div id="unityContainer" style="width: 100%"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">The Crazy Marriage</div>
-      </div>
-    </div>
+	<div class="titleBarImage">
+	</div>
 </body>
 
 <script src="js/bootstrap.min.js"/>
