Added save the date and leaves

--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -13,8 +13,23 @@
 </head>
 
 <body>
-	<div class="titleBarImage">
-		<h1 class="text-center align-middle">Nathan & Arjanna</h1>
+	<div class="container">
+		<img src="images/leavesLeft.png" class="sticky-top mh-100 float-left"/>
+		<img src="images/leavesRight.png" class="sticky-top mh-100 float-right"/>
+		
+		<div id="topSpacing"></div>
+		
+		<div id="titleBar" class="woodInfoBar">
+			<h1 class="text-center align-middle">Nathan & Arjanna</h1>
+		</div>		
+		
+		<div class="text-center mt-5 mb-5">
+			<img src="images/saveTheDate.png"/>
+		</div>
+		
+		<div id="bottomBar" class="woodInfoBar">
+			<h2 class="text-center align-middle">Meer info volgt nog!</h2>
+		</div>				
 	</div>
 </body>
 
