Improved website infrastructure

--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -13,25 +13,22 @@
 </head>
 
 <body>
-	<div class="container">
-		<!--
-		<img src="images/leavesLeft.png" class="sticky-top mh-100 float-left overflow-hidden"/>
-		<img src="images/leavesRight.png" class="sticky-top mh-100 float-right overflow-hidden"/>
-		-->
-		<div id="topSpacing"></div>
-		
+	<div id="wrapper">
 		<div id="titleBar" class="woodInfoBar">
 			<h1 class="text-center align-middle">Nathan & Arjanna</h1>
-		</div>		
-		
-		<div class="text-center mt-5 mb-5 mw-100">
-			<img class="text-center align-middle w-auto overflow-hidden" src="images/saveTheDate.png"/>
 		</div>
 		
-		<div id="bottomBar" class="woodInfoBar">
-			<h2 class="text-center align-middle">Meer info volgt nog!</h2>
-		</div>				
+		<div class="mt-5 mb-5 mw-100 align-middle d-flex">
+			<div class="imageContainer">
+				<div id="saveTheDateImg" src="images/saveTheDate.png"></div>
+			</div>
+		</div>
+	
+		<div class="overlap"></div>
 	</div>
+	<div id="bottomBar" class="woodInfoBar">
+		<h2 class="text-center align-middle">Meer info volgt nog!</h2>
+	</div>	
 </body>
 
 <script src="js/bootstrap.min.js"/>
