Improved mobile layout

--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -13,21 +13,20 @@
 </head>
 
 <body>
+	<div id="leavesRight"></div>
 	<div id="wrapper">
 		<div id="titleBar" class="woodInfoBar">
 			<h1 class="text-center align-middle">Nathan & Arjanna</h1>
 		</div>
 		
-		<div class="mt-5 mb-5 mw-100 align-middle d-flex">
-			<div class="imageContainer">
-				<div id="saveTheDateImg" src="images/saveTheDate.png"></div>
-			</div>
+		<div class="imageContainer">
+			<div id="saveTheDateImg" src="images/saveTheDate.png"></div>
 		</div>
 	
 		<div class="overlap"></div>
 	</div>
 	<div id="bottomBar" class="woodInfoBar">
-		<h2 class="text-center align-middle">Meer info volgt nog!</h2>
+		<h2>Meer info volgt nog!</h2>
 	</div>	
 </body>
 
