Css code cleanup

--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -22,7 +22,12 @@
 		<div class="imageContainer">
 			<div id="saveTheDateImg" src="images/saveTheDate.png"></div>
 		</div>
-	
+		<!--
+		<div class="imageContainer">
+			<img id="saveTheDateImg2" src="images/saveTheDateWithoutLeaves.png"/>
+		</div>
+		-->
+		
 		<div class="overlap"></div>
 	</div>
 	<div id="bottomBar" class="woodInfoBar">
