Added leaves, made it so the saveTheDate img scales with the screen width if the screen is smaller than 600px

--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -13,20 +13,14 @@
 </head>
 
 <body>
-	<div id="leavesRight"></div>
+	<div class="sideBar" id="leavesLeft"></div>
+	<div class="sideBar" id="leavesRight"></div>
 	<div id="wrapper">
 		<div id="titleBar" class="woodInfoBar">
 			<h1 class="text-center align-middle">Nathan & Arjanna</h1>
 		</div>
 		
-		<div class="imageContainer">
-			<div id="saveTheDateImg" src="images/saveTheDate.png"></div>
-		</div>
-		<!--
-		<div class="imageContainer">
-			<img id="saveTheDateImg2" src="images/saveTheDateWithoutLeaves.png"/>
-		</div>
-		-->
+		<div id="saveTheDateImg"></div>
 		
 		<div class="overlap"></div>
 	</div>
@@ -37,12 +31,3 @@
 
 <script src="js/bootstrap.min.js"/>
 </html>
-
-<!-- 
-TODO:
-- uitzoeken hoe te customizen met bootstrap
-- domeinnaam hosten firebase
-- icon
-- art implementeren
-- bootstrap customizen
--->
