--- a/Website/public/savethedate/index.html
+++ b/Website/public/savethedate/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Nathan & Arjanna</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="css/bootstrap.css"/>
-	<link rel="stylesheet" href="css/custom.css"/>
-	<link rel="icon" href="favicon.png">
+	<link rel="stylesheet" href="../css/bootstrap.css"/>
+	<link rel="stylesheet" href="../css/custom.css"/>
+	<link rel="icon" href="../favicon.png">
 </head>
 
 <body>
@@ -16,14 +16,12 @@
 			<h1>Nathan & Arjanna</h1>
 		</div>
 		
-		<div class="d-flex justify-content-center">
-			<h2 class="align-middle">Hier komt binnenkort meer informatie te staan!</h2>
-		</div>
+		<div id="saveTheDateImg"></div>
 		
 		<div class="overlap"></div>
 	</div>
 	<div id="bottomBar" class="woodInfoBar">
-		<h2>Copyright of zoiets</h2>
+		<h2>Meer info volgt nog!</h2>
 	</div>	
 </body>
 
