--- a/Website/public/savethedate.html
+++ b/Website/public/savethedate.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+	<title>Nathan & Arjanna</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/bootstrap.css"/>
-	<title>Nathan & Arjanna</title>
+	<link rel="stylesheet" href="css/custom.css"/>
+	<link rel="icon" href="favicon.png">
 </head>
 
 <body>
-	<h1>Save the date!</h1>
-	<h2>Wij gaan trouwen op 31 oktober 2020!</h2>
-	<h2>We zouden het mooi vinden als u/jij er ook bij wilt zijn!</h2>
+	<div class="sideBar" id="leavesLeft"></div>
+	<div class="sideBar" id="leavesRight"></div>
+	<div id="wrapper">
+		<div id="titleBar" class="woodInfoBar">
+			<h1>Nathan & Arjanna</h1>
+		</div>
+		
+		<div id="saveTheDateImg"></div>
+		
+		<div class="overlap"></div>
+	</div>
+	<div id="bottomBar" class="woodInfoBar">
+		<h2>Meer info volgt nog!</h2>
+	</div>	
 </body>
 
 <script src="js/bootstrap.min.js"/>
