Added comments on how to improve the code

--- a/Website/public/gametest.html
+++ b/Website/public/gametest.html
@@ -42,7 +42,10 @@
       alert("we willen maar 1 afbeelding laten zien, sorry!")
       }
     }
-                               
+       
+	// Code ziet er l een stuk beter uit mam, maar het kan nog netter.
+	// Probeer consistent te zijn met het gebruik van tabs: binnen elke if/else en binnen elke functie een extra tab!
+	// Ook is 'a' totaal niet beschrijvend, ik vroeg me eerst af of je die variabele wel zou gebruiken. Geef liever een naam zoals 'imageCount'
 </script>
 
 </html>
