Made the invitation bigger so the text fits in it

--- a/Website/public/invitation.html
+++ b/Website/public/invitation.html
@@ -3,8 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/gameLayout.css"/>
-	<!--<link rel="stylesheet" href="css/searchPlateMobile.css"/>-->
-    <title>Nathan & Arjanna & Mama</title>
+    <title>Nathan & Arjanna</title>
 </head>
 
 <body onload="OnPageLoaded()">    
@@ -31,17 +30,17 @@
         
     <!-- als de gebruiker op een button klikt wordt dit zichtbaar: -->
     <div id="invitation">
-        <h2>Kerklocatie:</h2>
+        <h3>Kerklocatie:</h3>
         <p class= "infoText" id="info-1">De kerk is op het Markplein 2 te Hattem</p>
-        <h2>Kerktijd:</h2>
+        <h3>Kerktijd:</h3>
         <p class= "infoText" id="info-2">De kerkdienst begint om 12:00 uur.</p>
-        <h2>Dresscode:</h2>
+        <h3>Dresscode:</h3>
         <p class= "infoText" id="info-3">Graag warm kleden! Voor daggasten: neem een kleedje mee!</p>
-        <h2>Maaltijd:</h2>
+        <h3>Maaltijd:</h3>
         <p class= "infoText" id="info-4">We gaan gezond eten.</p>
-        <h2>Receptie:</h2>
+        <h3>Receptie:</h3>
         <p class= "infoText" id="info-5">De receptie vindt plaats op camping De Jagerstee, Officiersweg 86 te Epe.</p>
-        <h2>Cadeaus:</h2>
+        <h3>Cadeaus:</h3>
         <p class= "infoText" id="info-6">We zouden het super vinden als jullie iets van ons <a href="https://www.lijstje.nl/NathanEnArjanna" target="blank">lijstje</a> zouden willen geven!</p>
 		</br>
 		<button onclick="OnCloseInvitationClicked()" >Oké!</button>
