--- a/Website/public/savethedate.html
+++ b/Website/public/savethedate.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Nathan & Arjanna</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="css/bootstrap.css"/>
-	<link rel="stylesheet" href="css/custom.css"/>
+	<link rel="stylesheet" href="css/baseLayout.css"/>
+	<link rel="stylesheet" href="css/saveTheDate.css"/>
 	<link rel="icon" href="favicon.png">
 </head>
 
@@ -24,6 +24,4 @@
 		<h2>Meer info volgt nog!</h2>
 	</div>	
 </body>
-
-<script src="js/bootstrap.min.js"/>
 </html>
