Improved styling for RSVP, implemented cloth png todo: title change & last button name change (maybe also the one before the last one, when the player is specialGuest)

--- a/Website/public/invitationgame.html
+++ b/Website/public/invitationgame.html
@@ -34,7 +34,7 @@
 		<input class="searchPlateItem" id="item1" type="image" src="images/searchPlate/key.png" onclick="OnItemClicked(1)"></input>   
 		<input class="searchPlateItem" id="item2" type="image" src="images/searchPlate/agenda.png" onclick="OnItemClicked(2)"></input>
 		<input class="searchPlateItem" id="item3" type="image" src="images/searchPlate/knife.png" alt="knife" onclick="OnItemClicked(3)"></input>
-		<input class="searchPlateItem" id="item4" type="image" src="images/searchPlate/cadeau.png" alt="cadeau" onclick="OnItemClicked(4)"></input>
+		<input class="searchPlateItem" id="item4" type="image" src="images/searchPlate/cloth.png" alt="cadeau" onclick="OnItemClicked(4)"></input>
 		<input class="searchPlateItem specialGuestItem" id="item5" type="image" src="images/searchPlate/spoon.png" alt="spoon" onclick="OnItemClicked(5)"></input>
 		<div style="clear: both"></div>	
 	</div>
@@ -44,7 +44,7 @@
 	let targetDescriptions = ["Zoek Arjanna's sleutel!", 
 		"Zoek de agenda van Nathan", 
 		"Waar is het mes gebleven?", 
-		"Zoek het cadeau"];
+		"Zoek het kleed"];
 	let specialGuestTargetDescriptions = ["Waar is het bestek gebleven?"];
 	
 	function OnPageLoaded(){
