ons verhaal, rsvp changes en coronamaatregelen

--- a/Website/public/RSVP.html
+++ b/Website/public/RSVP.html
@@ -20,6 +20,7 @@
 				<li> <a href="index.html"><h3> Home </h3></a>
 				<li> <a href="OnsVerhaal.html"><h3> Ons verhaal</h3></a>
 				<li> <a href="RSVP.html"><h3> RSVP </h3></a>
+				<li> <a href="coronamaatregelen.html"> <h3> Coronamaatregelen </h3> </a> 
 				<li> <a href="#" onclick='window.open("https://www.lijstje.nl/NathanEnArjanna");return false;'><h3> Verlanglijstje </h3></a>
 			</ul>			
 		</div>
