--- a/Website/public/coronamaatregelen.html
+++ b/Website/public/coronamaatregelen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-	<title>Nathan & Arjanna</title>
+	<title>Coronamaatregelen</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/baseLayout.css"/>
 	<link rel="stylesheet" href="css/onsVerhaal.css"/>
@@ -13,7 +13,7 @@
 	<div class="sideBar" id="leavesRight"></div>
 	<div id="wrapper">
 		<div id="titleBar" class="woodInfoBar">
-			<h1>Nathan & Arjanna</h1>
+			<h1>Coronamaatregelen</h1>
 		</div>
 		<ul id="menu"> 
 				<li> <a href="index.html"><h3> Home </h3></a>
@@ -23,9 +23,12 @@
 				<li> <a href="#" onclick='window.open("https://www.lijstje.nl/NathanEnArjanna");return false;'><h3> Verlanglijstje </h3></a>
 			</ul>
 		<div class="d-flex justify-content-center">
-			<h2 class="align"> Welkom op deze website. Leuk dat je er bent! Hier kun je van alles lezen over de bruiloft. Want op 31 oktober 2020 gaan wij, Nathan en Arjanna, Trouwen!</h2>
-			<img src="images/SelfieWaa.jpg" width="200" class="center"> </div> 
-			<h2 class="align"> We hebben er ontzettend veel zin in en wij hopen dat het een hele mooie dag wordt en dat jij er bij bent! Als je komt, vul dan vooral je aanwezigheid in via de RSVP. Wil je meer weten over hoe wij elkaar leerden kennen? Kijk dan ook even bij 'Ons verhaal'. Tot snel! Liefs, Nathan en Arjanna. </h2> 
+			<h2 class="align">Helaas zijn er ook wat minder leuke dingen waar we rekening mee moeten houden op de bruiloft. We moeten ons aan de regels houden rondom het coronavirus. Omdat de maatregelen vaak worden veranderd door de overheid, zal deze pagina vaak worden geupdate. Kijk dus af en toe of er nog een update op de site staat. Ondanks de regels gaan we natuurlijk enorm genieten van deze dag.
+			<br>
+			<br>
+			<b>De huidige regels </b>: 
+			
+	</h2>
 		</div>
 		
 		<div class="overlap"></div>
@@ -34,5 +37,6 @@
 		<h2>Copyright &copy of zoiets</h2>
 	</div>	
 </body>
+
 
 </html>
