--- a/Website/public/OnsVerhaal.html
+++ b/Website/public/OnsVerhaal.html
@@ -4,7 +4,7 @@
 	<title>Nathan & Arjanna</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/baseLayout.css"/>
-	<link rel="stylesheet" href="css/onsVerhaal.css"/>
+	<link rel="stylesheet" href="css/OnsVerhaal.css"/>
 	<link rel="icon" href="favicon.png">
 </head>
 
@@ -13,7 +13,7 @@
 	<div class="sideBar" id="leavesRight"></div>
 	<div id="wrapper">
 		<div id="titleBar" class="woodInfoBar">
-			<h1>Nathan & Arjanna</h1>
+			<h1>Ons verhaal</h1>
 		</div>
 		<ul id="menu"> 
 				<li> <a href="index.html"><h3> Home </h3></a>
@@ -23,10 +23,9 @@
 				<li> <a href="#" onclick='window.open("https://www.lijstje.nl/NathanEnArjanna");return false;'><h3> Verlanglijstje </h3></a>
 			</ul>
 		<div class="d-flex justify-content-center">
-			<h2 class="align"> Welkom op deze website. Leuk dat je er bent! Hier kun je van alles lezen over de bruiloft. Want op 31 oktober 2020 gaan wij, Nathan en Arjanna, Trouwen!</h2>
-			<img src="images/SelfieWaa.jpg" width="200" class="center"> </div> 
-			<h2 class="align"> We hebben er ontzettend veel zin in en wij hopen dat het een hele mooie dag wordt en dat jij er bij bent! Als je komt, vul dan vooral je aanwezigheid in via de RSVP. Wil je meer weten over hoe wij elkaar leerden kennen? Kijk dan ook even bij 'Ons verhaal'. Tot snel! Liefs, Nathan en Arjanna. </h2> 
+			<h2>Dit verhaal begint in Amsterdam. In een krakend.... </h2>
 		</div>
+			
 		
 		<div class="overlap"></div>
 	</div>
