Moved gradient from RSVPcss into the baseLayout

--- a/Website/public/RSVP.html
+++ b/Website/public/RSVP.html
@@ -4,11 +4,10 @@
 	<title>Nathan & Arjanna</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/baseLayout.css"/>
-	<link rel="stylesheet" href="css/rsvp.css"/>
 	<link rel="icon" href="favicon.png">
 </head>
 
-<body>
+<body id="gradientBackground">
 	<div id="wrapper">
 		<div class="sideBar" id="leavesLeft"></div>
 		<div class="sideBar" id="leavesRight"></div>
