Fixed layout issues on 'onsVerhaal', 'index' and on 'coronamaatregelen'.html

--- a/Website/public/coronamaatregelen.html
+++ b/Website/public/coronamaatregelen.html
@@ -8,27 +8,29 @@
 	<link rel="icon" href="favicon.png">
 </head>
 
-<body>
+
+<body id="gradientBackground">
 	<div class="sideBar" id="leavesLeft"></div>
 	<div class="sideBar" id="leavesRight"></div>
 	<div id="wrapper">
 		<div id="titleBar" class="woodInfoBar">
-			<h1>Coronamaatregelen</h1>
-		</div>
-		<ul id="menu"> 
+			<h1 id="title">Nathan & Arjanna</h1>
+			<ul id="menu"> 
 				<li> <a href="index.html"><h3> Home </h3></a>
 				<li> <a href="OnsVerhaal.html"><h3> Ons verhaal</h3></a>
 				<li> <a href="RSVP.html"><h3> RSVP </h3></a>
 				<li> <a href="coronamaatregelen.html"> <h3> Coronamaatregelen </h3> </a> 
 				<li> <a href="#" onclick='window.open("https://www.lijstje.nl/NathanEnArjanna");return false;'><h3> Verlanglijstje </h3></a>
 			</ul>
-		<div class="d-flex justify-content-center">
-			<h2 class="align">Helaas zijn er ook wat minder leuke dingen waar we rekening mee moeten houden op de bruiloft. We moeten ons aan de regels houden rondom het coronavirus. Omdat de maatregelen vaak worden veranderd door de overheid, zal deze pagina vaak worden geupdate. Kijk dus af en toe of er nog een update op de site staat. Ondanks de regels gaan we natuurlijk enorm genieten van deze dag.
-			<br>
-			<br>
+		</div>
+		
+		<div id="pageContent">
+			<p> Helaas zijn er ook wat minder leuke dingen waar we rekening mee moeten houden op de bruiloft. We moeten ons aan de regels 
+			houden rondom het coronavirus. Omdat de maatregelen vaak worden veranderd door de overheid, zal deze pagina vaak worden geupdate. 
+			Kijk dus af en toe of er nog een update op de site staat. Ondanks de regels gaan we natuurlijk enorm genieten van deze dag.
+			<br><br>
 			<b>De huidige regels </b>: 
-			
-	</h2>
+			</p>
 		</div>
 		
 		<div class="overlap"></div>
