--- a/Website/public/OnsVerhaal.html
+++ b/Website/public/OnsVerhaal.html
@@ -4,28 +4,27 @@
 	<title>Nathan & Arjanna</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/baseLayout.css"/>
-	<link rel="stylesheet" href="css/OnsVerhaal.css"/>
 	<link rel="icon" href="favicon.png">
 </head>
 
-<body>
+<body id="gradientBackground">
 	<div class="sideBar" id="leavesLeft"></div>
 	<div class="sideBar" id="leavesRight"></div>
 	<div id="wrapper">
 		<div id="titleBar" class="woodInfoBar">
-			<h1>Ons verhaal</h1>
-		</div>
-		<ul id="menu"> 
+			<h1 id="title">Nathan & Arjanna</h1>
+			<ul id="menu"> 
 				<li> <a href="index.html"><h3> Home </h3></a>
 				<li> <a href="OnsVerhaal.html"><h3> Ons verhaal</h3></a>
 				<li> <a href="RSVP.html"><h3> RSVP </h3></a>
 				<li> <a href="coronamaatregelen.html"> <h3> Coronamaatregelen </h3> </a> 
 				<li> <a href="#" onclick='window.open("https://www.lijstje.nl/NathanEnArjanna");return false;'><h3> Verlanglijstje </h3></a>
 			</ul>
-		<div class="d-flex justify-content-center">
-			<h2>Dit verhaal begint in Amsterdam. In een krakend.... </h2>
 		</div>
-			
+		
+		<div id="pageContent">
+			<p>Dit verhaal begint in Amsterdam. In een krakend.... </p>
+		</div>			
 		
 		<div class="overlap"></div>
 	</div>
