--- a/Website/public/OnsVerhaal.html
+++ b/Website/public/OnsVerhaal.html
@@ -14,11 +14,11 @@
 		<div id="titleBar" class="woodInfoBar">
 			<h1 id="title">Nathan & Arjanna</h1>
 			<ul id="menu"> 
-				<li> <a href="index.html"><h3> Home </h3></a>
-				<li> <a href="OnsVerhaal.html"><h3> Ons verhaal</h3></a>
-				<li> <a href="RSVP.html"><h3> RSVP </h3></a>
-				<li> <a href="coronamaatregelen.html"> <h3> Coronamaatregelen </h3> </a> 
-				<li> <a href="#" onclick='window.open("https://www.lijstje.nl/NathanEnArjanna");return false;'><h3> Verlanglijstje </h3></a>
+				<li> <a href="index.html">Home</a>
+				<li> <a href="OnsVerhaal.html">Ons verhaal</a>
+				<li> <a href="RSVP.html">RSVP</a>
+				<li> <a href="coronamaatregelen.html">Coronamaatregelen</a> 
+				<li> <a href="#" onclick='window.open("https://www.lijstje.nl/NathanEnArjanna");return false;'>Verlanglijstje</a>
 			</ul>
 		</div>
 		
