--- a/Website/public/RSVP.html
+++ b/Website/public/RSVP.html
@@ -8,20 +8,18 @@
 </head>
 
 <body id="gradientBackground">
+	<div class="sideBar" id="leavesLeft"></div>
+	<div class="sideBar" id="leavesRight"></div>
 	<div id="wrapper">
-		<div class="sideBar" id="leavesLeft"></div>
-		<div class="sideBar" id="leavesRight"></div>
 		<div id="titleBar" class="woodInfoBar">
-			<div id="title">
-				<h1>Nathan & Arjanna</h1> 
-			</div>
+			<h1 id="title">Nathan & Arjanna</h1>
 			<ul id="menu"> 
-				<li> <a href="index.html"><h3> Home </h3></a>
-				<li> <a href="OnsVerhaal.html"><h3> Ons verhaal</h3></a>
-				<li> <a href="RSVP.html"><h3> RSVP </h3></a>
-				<li> <a href="coronamaatregelen.html"> <h3> Coronamaatregelen </h3> </a> 
-				<li> <a href="#" onclick='window.open("https://www.lijstje.nl/NathanEnArjanna");return false;'><h3> Verlanglijstje </h3></a>
-			</ul>			
+				<li> <a href="index.html">Home</a>
+				<li> <a href="OnsVerhaal.html">Ons verhaal</a>
+				<li> <a href="RSVP.html">RSVP</a>
+				<li> <a href="coronamaatregelen.html">Coronamaatregelen</a> 
+				<li> <a href="#" onclick='window.open("https://www.lijstje.nl/NathanEnArjanna");return false;'>Verlanglijstje</a>
+			</ul>
 		</div>
 		
 		<iframe id="googleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSd_UcSluqad8-zz169jzw5y69GNYJivWAjY2z7kZKsMXtMKKQ/viewform?embedded=true" width="100%" height="1670px" frameborder="0" >Laden…</iframe>
