--- a/Website/public/coronamaatregelen.html
+++ b/Website/public/coronamaatregelen.html
@@ -8,7 +8,6 @@
 	<link rel="icon" href="favicon.png">
 </head>
 
-
 <body id="gradientBackground">
 	<div class="sideBar" id="leavesLeft"></div>
 	<div class="sideBar" id="leavesRight"></div>
@@ -16,11 +15,11 @@
 		<div id="titleBar" class="woodInfoBar">
 			<h1 id="title">Nathan & Arjanna</h1>
 			<ul id="menu"> 
-				<li> <a href="index.html"><h3> Home </h3></a>
-				<li> <a href="OnsVerhaal.html"><h3> Ons verhaal</h3></a>
-				<li> <a href="RSVP.html"><h3> RSVP </h3></a>
-				<li> <a href="coronamaatregelen.html"> <h3> Coronamaatregelen </h3> </a> 
-				<li> <a href="#" onclick='window.open("https://www.lijstje.nl/NathanEnArjanna");return false;'><h3> Verlanglijstje </h3></a>
+				<li> <a href="index.html">Home</a>
+				<li> <a href="OnsVerhaal.html">Ons verhaal</a>
+				<li> <a href="RSVP.html">RSVP</a>
+				<li> <a href="coronamaatregelen.html">Coronamaatregelen</a> 
+				<li> <a href="#" onclick='window.open("https://www.lijstje.nl/NathanEnArjanna");return false;'>Verlanglijstje</a>
 			</ul>
 		</div>
 		
